--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-    --primary-color: #d4af37;
+    --primary-color: #ffca91;
     --secondary-color: #1a1a1a;
     --text-color: #333;
     --light-bg: #f8f8f8;
