--- a/templates/shop/cart.html
+++ b/templates/shop/cart.html
@@ -28,7 +28,7 @@
                 <h2>Order Summary</h2>
                 <div class="summary-row">
                     <span>Subtotal:</span>
-                    <span id="cart-subtotal">$0.00</span>
+                    <span id="cart-subtotal">Ksh. 0</span>
                 </div>
                 <div class="summary-row">
                     <span>Shipping:</span>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="summary-row total">
                     <span>Total:</span>
-                    <span id="cart-total">$0.00</span>
+                    <span id="cart-total">Ksh. 0</span>
                 </div>
                 <a href="{% url 'shop:checkout' %}" class="btn btn-primary btn-block">Proceed to Checkout</a>
                 <a href="{% url 'shop:shop' %}" class="btn btn-secondary btn-block">Continue Shopping</a>
