Minor HTML change

--- a/templates/shop/home.html
+++ b/templates/shop/home.html
@@ -4,8 +4,8 @@
 {% block content %}
 <section class="hero">
     <div class="hero-content">
-        <h1 class="hero-title">Adorn Yourself with Elegance</h1>
-        <p class="hero-subtitle">Distinctively Elegant, Affordable, Unique</p>
+        <h1 class="hero-title">Adorn yourself with elegance</h1>
+        <p class="hero-subtitle">Distinctively elegant, Affordable, Unique</p>
         <a href="{% url 'shop:shop' %}" class="btn btn-primary">Shop Now</a>
     </div>
 </section>
