--- a/templates/shop/contact.html
+++ b/templates/shop/contact.html
@@ -47,15 +47,15 @@
                 <div class="contact-details">
                     <div class="contact-item">
                         <h3>Email</h3>
-                        <p>info@adornjewellery.com</p>
+                        <p>lerroygatimu@gmail.com</p>
                     </div>
                     <div class="contact-item">
                         <h3>Phone</h3>
-                        <p>+1 (555) 123-4567</p>
+                        <p>+254717207676</p>
                     </div>
                     <div class="contact-item">
                         <h3>Address</h3>
-                        <p>123 Jewelry Street<br>New York, NY 10001<br>United States</p>
+                        <p><!--Muthama--><br>Nairobi, NBO<br>Kenya</p>
                     </div>
                     <div class="contact-item">
                         <h3>Business Hours</h3>
